day04/dov.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dovns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy
  namespace: dovns
  labels:
    app: dov
    name: dov-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dov
      name: dov-po
  template:
    metadata:
      labels:
        app: dov
        name: dov-po
    spec:
      containers:
      - name: dov-container
        image: chukmunnlee/dov-bear:v5
        ports:
        - containerPort: 3000
        resources: 
          requests: 
            cpu: 100m
            memory: 128Mi
          limits: 
            cpu: 100m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: dov-svc
  namespace: dovns
  labels:
    app: dov
    name: dov-svc
spec:
  type: ClusterIP
  selector:
    app: dov
    name: dov-po
  ports:
  - port: 3000
    targetPort: 3000
