day04/dov-ing.yaml
---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: dov-ing 
  namespace: dovns 
  labels: 
    app: dov 
    name: dov-ing 
spec:
  ingressClassName: nginx 
  rules:
  - host: dov.104.248.99.31.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: dov-svc 
            port: 
              number: 3000
